--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,9 +1,11 @@
 .profile {
   max-width: 350px;
-  margin: 10px auto;
+  margin: 0 auto;
   border-radius: 2%;
 
   background-color: azure;
+  cursor: pointer;
+
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .profile:hover {
@@ -48,6 +50,7 @@
   width: 100%;
   text-align: center;
   border: 2px solid rgb(0 0 0 / 40%);
+  border-radius: 2%;
 }
 .label {
   display: block;
