--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -3,6 +3,8 @@
   margin: 40px auto;
   padding: 0;
   background-color: rgb(255, 255, 255);
+  border-radius: 5%;
+  box-shadow: 9px 8px 12px -2px rgba(0, 0, 0, 40%);
 }
 .title {
   margin: 0;
@@ -21,14 +23,15 @@
   padding-bottom: 15px;
   width: 100%;
   text-align: center;
-  border: 2px solid rgb(0 0 0 / 40%);
+  border-radius: 5%;
 }
 .label {
   display: block;
   margin-bottom: 10px;
 }
 .percentage {
-  padding: 0;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .id-1 {
