--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,7 @@
 .profile {
   max-width: 350px;
   margin: 0 auto;
-  border-radius: 2%;
+  border-radius: 3px;
 
   background-color: azure;
   cursor: pointer;
@@ -50,7 +50,7 @@
   width: 100%;
   text-align: center;
   border: 2px solid rgb(0 0 0 / 40%);
-  border-radius: 2%;
+  border-radius: 3px;
 }
 .label {
   display: block;
