--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -3,7 +3,7 @@
   margin: 40px auto;
   padding: 0;
   background-color: rgb(255, 255, 255);
-  border-radius: 5%;
+  border-radius: 3px;
   box-shadow: 9px 8px 12px -2px rgba(0, 0, 0, 40%);
 }
 .title {
